--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -1,8 +1,25 @@
 doctype html
-html
+html(ng-app="proyecto")
   head
     title= title
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Passion+One', type='text/css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Passion+One',type='text/css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oxygen',type='text/css')
+    link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
-node
+    base(href="/")
+  body(ng-cloak)
+    md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
+      md-nav-item(md-nav-sref="login") Login
+      md-nav-item(md-nav-sref="registro") Registro
+
+  div(ui-view="")
+
+  script(src = "https://code.jquery.com/jquery-3.1.1.min.js",integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",crossorigin="anonymous")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js")
+  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-animate.min.js")
+  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-aria.min.js")
+  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.min.js")
+  script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
+  script(src="/dist/app.min.js")
