--- a/website/angularjs/controller/login/login.jade
+++ b/website/angularjs/controller/login/login.jade
@@ -3,18 +3,15 @@
 
 
 
-style.
-    input.ng-invalid {
-        background-color: indianred;
-    }
+
 
 md-content(layout-gt-sm='row', layout-padding='')
     div
         md-input-container
             label Username
-            input(ng-model=' lc.username', required='')
+            input(ng-model=' lc.usernameModel', required='')
         md-input-container
             label Password
-            input(ng-model='lc.password', type='password')
+            input(ng-model='lc.passwordModel', type='password')
         md-button(ng-click="lc.login()") Login
         p {{ lc.status }}
