--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app="proyecto")
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Passion+One',type='text/css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oxygen',type='text/css')
     link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     base(href="/")
   body(ng-cloak)
@@ -22,4 +23,5 @@ html(ng-app="proyecto")
   script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-aria.min.js")
   script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.min.js")
   script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
+  script(src="https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.js")
   script(src="/dist/app.min.js")
