--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -8,13 +8,20 @@ html(ng-app="proyecto")
     link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css')
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
     base(href="/")
   body(ng-cloak)
-    md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
-      md-nav-item(md-nav-sref="login") Login
-      md-nav-item(md-nav-sref="registro") Registro
+    div(flex layout="row")
 
-  div(ui-view="")
+      div(flex=30 layout="column")
+      div(flex=30 layout="column")
+       md-card
+        md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
+          md-nav-item(md-nav-sref="login") Login
+          md-nav-item(md-nav-sref="registro") Registro
+
+        div(ui-view="")
+      div(flex=30 layout="column")
 
   script(src = "https://code.jquery.com/jquery-3.1.1.min.js",integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",crossorigin="anonymous")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.min.js")
@@ -24,4 +31,6 @@ html(ng-app="proyecto")
   script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.min.js")
   script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
   script(src="https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.js")
+  script(src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js")
+
   script(src="/dist/app.min.js")
