--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -1,5 +1,21 @@
 //
    Created by guzman on 4/02/17.
 
-p HOLA
-div(ui-view="")
+div(layout='column', style='height:500px;', ng-cloak='')
+    section(layout='row', flex='')
+        md-sidenav.md-sidenav-left(md-component-id='left', md-is-locked-open="$mdMedia('gt-md')", md-whiteframe='4')
+            md-toolbar.md-theme-indigo
+                h1.md-toolbar-tools Sidenav Left
+            md-content(layout-padding='')
+                md-button.md-primary(ng-click='close()', hide-gt-md='')
+                    | Close Sidenav Left
+                p(hide='', show-gt-md='')
+                    | This sidenav is locked open on your device. To go back to the default behavior,
+                    | narrow your display.
+        md-content(flex='', layout-padding='')
+            div(layout='column', layout-align='top center')
+                div(ui-view="")
+
+            div(flex='')
+
+
