--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -8,12 +8,14 @@ html(ng-app="proyecto")
     link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css')
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+
 
     base(href="/")
   body(ng-cloak)
-    div(flex layout="row")
+    //div(flex layout="row")
 
-      div(ui-view="")
+    div(ui-view="")
 
   script(src = "https://code.jquery.com/jquery-3.1.1.min.js",integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",crossorigin="anonymous")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.min.js")
