query insertar listas

--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -7,8 +7,8 @@ div(layout= "row")
         md-nav-item(md-nav-sref="main.nuevos") Nuevas
         md-nav-item(md-nav-sref="main.populares") Populares
         md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
-        md-nav-item(md-nav-sref="main.recomendaciones") Mis listas
-        md-nav-item(md-nav-sref="main.recomendaciones") Directorio listas
+        md-nav-item(md-nav-sref="main.mislistas") Mis listas
+        md-nav-item(md-nav-sref="main.directorio") Directorio listas
         div(flex)
         //md-nav-item(md-nav-sref="#")
         md-button(ng-click="fc.showAdvanced()")
