--- a/website/angularjs/controller/auth/frame/addListDialog.jade
+++ b/website/angularjs/controller/auth/frame/addListDialog.jade
@@ -10,12 +10,18 @@ md-dialog(flex=40)
                 div(layout='column')
                     md-input-container
                         label Name
-                        input( ng-model='mc.nombre', type='text', maxlength='15', name="name", required)
-                    md-chips(ng-model='mc.tags' placeholder="Añade tags")
-                    md-input-container
-                        label Enlaces
-                        input( ng-model='mc.nombre', type='text', maxlength='15', name="name", required)
-
+                        input( ng-model='mc.nombre', type='text', maxlength='15',  required)
+                    p {{ mc.nombre }}
+                    md-chips(ng-model='mc.tags' placeholder="Añade tags" required)
+                    div(layout='column')
+                        div(layout='row')
+                            md-input-container
+                                label Enlaces
+                                input( ng-model='mc.url', type='text', maxlength='15',  required)
+                            md-button(ng-click="mc.addUrl()") Añadir
+                    md-list
+                        md-list-item(ng-repeat="url in mc.urls track by $index")
+                            p {{ url }}
         md-dialog-actions(layout="row")
-            md-button(type='button') Cancelar
-            md-button( type='submit' ng-click="mc.answer(miForm)") Guardar
+            md-button( ng-click="mc.close()") Cancelar
+            md-button( ng-click="mc.answer()") Guardar
