--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -28,3 +28,5 @@ html(ng-app="proyecto")
   script(src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js")
 
   script(src="/dist/app.min.js")
+  script(src="https://www.youtube.com/iframe_api")
+  script(src="/angular-youtube-mb/dist/angular-youtube-embed.min.js")
