--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -27,6 +27,11 @@ html(ng-app="proyecto")
   script(src="https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.js")
   script(src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js")
 
-  script(src="/dist/app.min.js")
+
   script(src="https://www.youtube.com/iframe_api")
   script(src="/angular-youtube-mb/dist/angular-youtube-embed.min.js")
+  script(src="/ng-lodash/build/ng-lodash.min.js")
+  script(src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js")
+
+
+  script(src="/dist/app.min.js")
