--- a/website/angularjs/controller/auth/frame/addListDialog.jade
+++ b/website/angularjs/controller/auth/frame/addListDialog.jade
@@ -50,6 +50,7 @@ md-dialog(flex=60)
                     .md-list-item-text(layout='column')
                         h3 {{ url.artista }}
                         h4 {{ url.cancion }}
+                        md-button(ng-click='mc.editSong($index)') Editar
 
     div(layout="row")
         md-dialog-actions
