--- a/website/angularjs/controller/auth/frame/addListDialog.jade
+++ b/website/angularjs/controller/auth/frame/addListDialog.jade
@@ -15,7 +15,8 @@ md-dialog(flex=60)
                                 label Name
                                 input( ng-model='mc.nombre', type='text',  required)
                             p {{ mc.nombre }}
-                            md-chips(ng-model='mc.tags' placeholder="Añade tags" required)
+                            //md-chips(ng-model='mc.tags' placeholder="Añade tags" required)
+                            md-contact-chips(ng-model='mc.tagsSelected', md-contacts='mc.filter($query)', md-contact-name='nombre', md-require-match='true', md-highlight-flags='i', filter-selected='true', placeholder='To')
                             div(layout='column')
                                 div(layout='row')
                                     md-input-container
@@ -27,7 +28,7 @@ md-dialog(flex=60)
 
                             div(ng-show="mc.videoIds")
                                 md-list(layout="row" layout-wrap)
-                                    md-list-item.md-2-line(flex=33 ng-repeat="video in mc.videoIds track by $index")
+                                    md-list-item.md-1-line(flex=33 ng-repeat="video in mc.videoIds track by $index")
                                         md-card
                                             //md-card-title
                                                 md-card-title-text
