--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -1,4 +1,17 @@
 h1 LISTAS
 md-list
     md-list-item(ng-repeat="lista in mlc.listas")
+        md-card
+            img.md-card-image(ng-src='{{lista.info[0].thumbnail}}', alt='Washed Out')
+            md-card-title
+                md-card-title-text
+                    span.md-headline {{ lista.nombre }}
+            md-card-actions(layout='row', layout-align='start center')
+                md-card-icon-actions
+                    md-button.md-icon-button(aria-label='Favorite')
+                        md-icon(md-svg-icon='img/icons/favorite.svg')
+                    md-button.md-icon-button(aria-label='Share')
+                        md-icon(md-svg-icon='img/icons/share-arrow.svg')
+                md-button Action 1
+                md-button Action 2
         p {{ lista }}
