--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -1,17 +1,34 @@
 h1 LISTAS
-md-list
-    md-list-item(ng-repeat="lista in mlc.listas")
-        md-card
-            img.md-card-image(ng-src='{{lista.info[0].thumbnail}}', alt='Washed Out')
-            md-card-title
-                md-card-title-text
-                    span.md-headline {{ lista.nombre }}
-            md-card-actions(layout='row', layout-align='start center')
-                md-card-icon-actions
-                    md-button.md-icon-button(aria-label='Favorite')
-                        md-icon(md-svg-icon='img/icons/favorite.svg')
-                    md-button.md-icon-button(aria-label='Share')
-                        md-icon(md-svg-icon='img/icons/share-arrow.svg')
-                md-button Action 1
-                md-button Action 2
-        p {{ lista }}
+md-content.md-padding(layout-xs='column', layout='row')
+    div(flex-xs='', flex-gt-xs='50', layout='column')
+        md-list(layout="row" layout-wrap)
+            md-list-item(ng-repeat="lista in mlc.listas")
+                div.md-2-line(layot=row)
+                    md-card(flex=80)
+                        md-card-title
+                            md-card-title-text
+                                span.md-headline {{ lista.nombre }}
+                        div(layout= "row")
+                            img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
+                            img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
+                        div(layout= "row")
+                            img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
+                            img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
+
+                        //md-card-actions(layout='row', layout-align='start center')
+                        //    md-card-icon-actions
+                        p Etiquetas
+                        span {{ lista.tags }}
+                        md-card-content
+                            md-list-item(ng-repeat="info in lista.info")
+                                img.md-avatar(ng-src='{{info.thumbnail}}')
+                                div.md-list-item.text(layout='column')
+                                    span {{ info.artista }}
+                                    span {{ info.cancion }}
+                                //md-button.md-icon-button(aria-label='Favorite')
+                                //    md-icon(md-svg-icon='img/icons/favorite.svg')
+                                //md-button.md-icon-button(aria-label='Share')
+                                //    md-icon(md-svg-icon='img/icons/share-arrow.svg')
+                            //md-button Action 1
+                            //md-button Action 2
+                    //p {{ lista }}
