--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -1,21 +1,27 @@
 //
    Created by guzman on 4/02/17.
 
-
-div(layout= "row")
-    md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
-        md-nav-item(md-nav-sref="main.nuevos") Nuevas
-        md-nav-item(md-nav-sref="main.populares") Populares
-        md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
-        md-nav-item(md-nav-sref="main.mislistas") Mis listas
-        md-nav-item(md-nav-sref="main.directorio") Directorio listas
-        div(flex)
-        //md-nav-item(md-nav-sref="#")
-        md-button(ng-click="fc.showAdvanced()")
-            i.material-icons playlist-add
-        md-nav-item(md-nav-sref="main.logout") Cerrar sesion
-div(layour= "row")
-    div(ui-view="")
+div(layout="column" layout-fill)
+    header
+        div(layout= "row")
+            md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
+                md-nav-item(md-nav-sref="main.nuevos") Nuevas
+                md-nav-item(md-nav-sref="main.populares") Populares
+                md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
+                md-nav-item(md-nav-sref="main.mislistas") Mis listas
+                md-nav-item(md-nav-sref="main.directorio") Directorio listas
+                div(flex)
+                //md-nav-item(md-nav-sref="#")
+                md-button(ng-click="fc.showAdvanced()")
+                    i.material-icons playlist-add
+                md-nav-item(md-nav-sref="main.logout") Cerrar sesion
+    main(flex)
+        div(ui-view="")
+        //div()
+    div.footer
+        md-toolbar.md-scroll-shrink
+            div(layout="row" flex)
+                span hola
 
 
 
