--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -12,7 +12,7 @@ html(ng-app="proyecto")
 
 
     base(href="/")
-  body(ng-cloak)
+  body(ng-cloak layout="column" layout-fill)
     //div(flex layout="row")
 
     div(ui-view="")
