--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -20,6 +20,7 @@ div(layout="row")
                             //    md-card-icon-actions
                             p Etiquetas
                             span(flex) {{ lista.tags }}
+                            md-button(ng-click="mlc.edit(lista)") EDITAR
                         //md-card-content
                         //    md-list-item(ng-repeat="info in lista.info")
                         //        img.md-avatar(ng-src='{{info.thumbnail}}')
@@ -30,39 +31,3 @@ div(layout="row")
                                 //    md-icon(md-svg-icon='img/icons/favorite.svg')
                                 //md-button.md-icon-button(aria-label='Share')
                                 //    md-icon(md-svg-icon='img/icons/share-arrow.svg')
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
-p hola
