retoque querys cambio base de datos

--- a/website/angularjs/controller/auth/editList/editList.jade
+++ b/website/angularjs/controller/auth/editList/editList.jade
@@ -6,6 +6,8 @@ md-list
         div.md-list-item.text(layout='column')
             span {{ info.artista }}
             span {{ info.cancion }}
+
         md-checkbox.md-secondary(aria-label="row" ng-model="elc.editList.info[$index].seleccionado")
+        md-button(ng-click="") Editar
     md-button(ng-click = 'elc.eliminar()') Elminiar seleccionados
     md-button(ng-click = 'elc.addNew()') Añadir
