--- a/website/angularjs/controller/auth/editList/songEditDialog.jade
+++ b/website/angularjs/controller/auth/editList/songEditDialog.jade
@@ -14,4 +14,4 @@ md-dialog(flex=40).confirm
                         input( ng-model='sec.cancion', type='text',  required)
                     md-dialog-actions
                         md-button( ng-click="sec.close()") Cancelar
-                        md-button( ng-click="sec.save(elc.editList.idlista)") Guardar
+                        md-button( ng-click="sec.save()") Guardar
