--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -9,7 +9,7 @@ div(layout="column" layout-fill)
             md-nav-item(md-nav-sref="main.populares") Populares
             md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
             md-nav-item(md-nav-sref="main.mislistas") Mis listas
-            md-nav-item(md-nav-sref="main.directorio") Directorio listas
+            md-nav-item(md-nav-sref="main.favoritos") Mis Favoritos
             div(flex)
             //md-nav-item(md-nav-sref="#")
             md-button(ng-click="fc.showAdvanced()")
