--- a/website/angularjs/controller/auth/favoritos/favoritos.jade
+++ b/website/angularjs/controller/auth/favoritos/favoritos.jade
@@ -19,3 +19,4 @@ div(layout="row")
                     //    md-card-icon-actions
                     p Etiquetas
                     span(flex) {{ lista.tags }}
+                    md-button(ng-click="flc.play(lista.info)") Reproducir
