--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -3,28 +3,49 @@
 
 div(layout="column" layout-fill)
 
-    div(layout= "row" layout-align="center start")
-        md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
-            md-nav-item(md-nav-sref="main.nuevos") Nuevas
-            md-nav-item(md-nav-sref="main.populares") Populares
-            md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
-            md-nav-item(md-nav-sref="main.mislistas") Mis listas
-            md-nav-item(md-nav-sref="main.favoritos") Mis Favoritos
-            div(flex)
-            //md-nav-item(md-nav-sref="#")
-            md-button(ng-click="fc.showAdvanced()")
-                i.material-icons playlist-add
-            md-nav-item(md-nav-sref="main.logout") Cerrar sesion
-    div(layout= "row" layout-align="center center")
-
-        div(ui-view="")
-    //div()
-    div(layout= "row" layout-align="center end")
+    //md-toolbar
+    //    .md-toolbar-tools
+    md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
+        md-nav-item(md-nav-sref="main.nuevos") Nuevas
+        md-nav-item(md-nav-sref="main.populares") Populares
+        md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
+        md-nav-item(md-nav-sref="main.mislistas") Mis listas
+        md-nav-item(md-nav-sref="main.favoritos") Mis Favoritos
         div(flex)
-            div(ng-show="fc.youtube")
-                youtube-video(video-url="fc.idVideo" player-vars="fc.playerVars" player-width="'50%'")
+        //md-nav-item(md-nav-sref="#")
+        md-button(ng-click="fc.showAdvanced()")
+            i.material-icons playlist-add
+        md-nav-item(md-nav-sref="main.logout") Cerrar sesion
+        div(layout="row")
+            md-input-container(flex='')
+                label Buscador
+                input(type='text' ng-model='fc.busqueda' search)
+                md-button(ng-click="fc.buscar()" ) Buscar
+    md-content(layout='column')
+        main
+            div(ui-view="")
+        span(flex)
+        footer
+            p footer
+            //div(ng-show="fc.youtube")
+            //    youtube-video(video-url="fc.idVideo" player-vars="fc.playerVars" player-width="'50%'")
 
 
-
-
+//div(layout="column" layout-fill)
+//    md-toolbar
+//        .md-toolbar-tools
+//            h2 Toolbar
+//    md-content(layout='column')
+//        main
+//            p content
+//            p content
+//            p content
+//            p content
+//            p content
+//
+//
+//            p content
+//        span(flex)
+//        footer
+//            p footer
 
