--- a/website/angularjs/controller/auth/nuevos/nuevos.jade
+++ b/website/angularjs/controller/auth/nuevos/nuevos.jade
@@ -4,7 +4,7 @@ p NUEVOS
 div(layout="row")
     md-content.md-padding(layout-xs='column', layout='row')
         md-list(layout="row" layout-wrap)
-            md-list-item(flex=25 ng-repeat="lista in nct.nuevos track by $index")
+            md-list-item(ng-repeat="lista in nct.nuevos track by $index")
                 md-card(flex)
                     md-card-title
                         md-card-title-text
@@ -20,7 +20,8 @@ div(layout="row")
                     //    md-card-icon-actions
                     p Etiquetas
                     span(flex) {{ lista.tags }}
-                    md-button(ng-click="") Reproducir
+                    md-button(ng-click="nct.play(lista.info)") Reproducir
                     div(ng-if="lista.usuarioid != lista.miusuarioid")
                         md-button(ng-click="nct.favorito(lista.listaid)") Favorito
+
                 //md-card-content
